--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 ---
-theme: jekyll-theme-merlot
+layout: default
+title: タイトルは２つある
+description: metaタグで見れる
 ---
-<!DOCTYPE html>
-<html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Lists</title>
+<body>
+<body>
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/kanban.css">
-</head>
-
-<body>
 	<section class="kanban-demo">
      <div class="board">
         <div class="board-column other">
@@ -1858,5 +1852,3 @@ theme: jekyll-theme-merlot
     <script src="js/grid.js"></script>
     <script src="js/kanban.js"></script>
 </body>
-
-</html>
