--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
----
-layout: default
-title: タイトルは２つある
-description: metaタグで見れる
----
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document Lists</title>
+	<link rel="stylesheet" href="html/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"/>
+</head>
 <body>
-<body>
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/kanban.css">
 	<section class="kanban-demo">
      <div class="board">
         <div class="board-column other">
@@ -1852,3 +1853,4 @@ description: metaタグで見れる
     <script src="js/grid.js"></script>
     <script src="js/kanban.js"></script>
 </body>
+</html>
