--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document Lists</title>
-	<link rel="stylesheet" href="html/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="css/grid.css">
+	<link rel="stylesheet" href="css/kanban.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<section class="kanban-demo">
