--- a/index.html
+++ b/index.html
@@ -1849,6 +1849,19 @@
         </div>
     </div>
     </section>
+    <section>
+        <img src="images/kasp01.jpg">
+        <img src="images/kasp02.jpg">
+        <img src="images/kasp03.jpg">
+        <img src="images/kaz_first.jpg">
+        <img src="images/kaz_last.jpg">
+        <img src="images/voice_top.jpg">
+        <img src="images/voice_teaser.jpg">
+        <img src="images/works01.jpg">
+        <img src="images/works02.jpg">
+        <img src="images/works03.jpg">
+        <img src="images/works04.jpg">
+    </section>
     <script src="js/web-animations.2.3.1.min.js"></script>
     <script src="js/hammer.2.0.8.min.js"></script>
     <script src="js/muuri.0.7.0.js"></script>
