--- a/index.html
+++ b/index.html
@@ -1850,17 +1850,17 @@
     </div>
     </section>
     <section>
-        <img src="images/kasp01.jpg">
-        <img src="images/kasp02.jpg">
-        <img src="images/kasp03.jpg">
-        <img src="images/kaz_first.jpg">
-        <img src="images/kaz_last.jpg">
-        <img src="images/voice_top.jpg">
-        <img src="images/voice_teaser.jpg">
-        <img src="images/works01.jpg">
-        <img src="images/works02.jpg">
-        <img src="images/works03.jpg">
-        <img src="images/works04.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/kasp01.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/kasp02.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/kasp03.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/kaz_first.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/kaz_last.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/voice_top.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/voice_teaser.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/works01.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/works02.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/works03.jpg">
+        <img src="https://github.com/arihito/portfoilo/blob/master/images/works04.jpg">
     </section>
     <script src="js/web-animations.2.3.1.min.js"></script>
     <script src="js/hammer.2.0.8.min.js"></script>
